2010-07-16  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* config/or32/or32.h: Updated SPEC definitions to pick up newlib
	in custom location.

2010-07-13  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* config/or32/initfini.c: Corrected assembler sequences.

2010-07-07  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* config.gcc: Specified cpu_type for or32. Corrected templates
	specified for or32-*-elf*. Added extra_parts for
	or32-*-elf*. Specified t-or32 as tmake_file for or32-*-elf*.
	* config/or32/initfini.c: Created.
	* config/or32/or32.h <LINK_SPEC>: Removed.
	<STARTFILE_SPEC>: Add crtinit.o.
	<ENDFILE_SPEC>: Just specify crtfini.o.
	<LIB_SPEC>: Unified multiple definitions. Added newlib library
	when specified.
	* config/or32/or32.opt <mor32-newlib-uart>: New option added.
	* config/or32/t-default: Added details for crtinit and crtfini.
	* config/or32/t-or32: Added details for crtinit and crtfini.

2010-06-30  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* config/or32/or32.h <FUNCTION_PROFILER>: Corrected definition.
	<LINK_SPEC>: Pick up newlib specific linker script.
	<ENDFILE_SPEC>: Specify newlib library.
	* config/or32/or32.opt <mor32-newlib>: New option added.

2010-06-21  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* config/or32/or32.md: Duplicate define_insn of "movdf" and "movsf"
	removed.

2010-06-17  Jungsook yang  <jungsook.yang@uci.edu>

	* config/or32/or32.c (or32_expand_branch): Added SFmode case.
	* config/or32/or32.md <define_expand "*cmpsf">: Added.
	<define_expand "*cmpsf_eq">: Added.
	<define_expand "*cmpsf_ne">: Added.
	<define_expand "*cmpsf_gt">: Added.
	<define_expand "*cmpsf_ge">: Added.
	<define_expand "*cmpsf_lt">: Added.
	<define_expand "*cmpsf_le">: Added.
	<define_insn "movdf">: Added.
	<define_insn "movsf">: Added.
	<define_insn "adddf3">: Added TARGET_DOUBLE_FLOAT.
	<define_insn "subdf3">: Added TARGET_DOUBLE_FLOAT.
	<define_insn "muldf3">: Added TARGET_DOUBLE_FLOAT.