@@ -1,3 +1,8 @@
+2010-07-17  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* config/or32/or32.h: Updated STARTFILE_SPEC and LIB_SPEC
+	definition for newlib.
+
 2010-07-16  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* config/or32/or32.h: Updated SPEC definitions to pick up newlib
